--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,12 @@
     -->
 
 
-
+  <link rel="stylesheet" href="css/bootstrap.min.css" /> 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/font-awesome.css"> 
+<link rel="stylesheet" href="css/owl.carousel.min.css">
+<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/responsive.css" />
 
 
 
@@ -49,6 +54,13 @@
         <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>    
 
 
+        <link rel="stylesheet" href="css/bootstrap.min.css" /> 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+          <link rel="stylesheet" href="css/font-awesome.css"> 
+        <link rel="stylesheet" href="css/owl.carousel.min.css">
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/responsive.css" />
+        
         
     <title>React App</title>
   </head>
